<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.folder.AddFolderFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView android:text="@string/add_folder"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            style="@style/Header"
            android:layout_height="wrap_content"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:lines="1"
            android:hint="@string/folder_name"
            android:inputType="text"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lang1"
            android:lines="1"
            android:hint="@string/lang1"
            android:inputType="text"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lang2"
            android:lines="1"
            android:hint="@string/lang2"
            android:inputType="text"/>

        <Button android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:gravity="center_horizontal"/>
    </LinearLayout>

</FrameLayout>