<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText android:layout_width="0dp"
            android:layout_weight="0.7"
            android:ems="10"
            android:layout_height="wrap_content"
            android:id="@+id/import_filename"
            android:text="@string/filename" />

        <Button android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:id="@+id/open_import_file_button"
            android:text="@string/open" />
    </LinearLayout>

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/import_button"
        android:text="@string/import_name" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:id="@+id/select_all_button"
            android:text="@string/selectAll" />

        <Button android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:id="@+id/select_none_button"
            android:text="@string/selectNone" />
    </LinearLayout>



    <ListView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_of_folders"></ListView>
</LinearLayout>