<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:text="@string/i_dont_know"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Spinner
        android:id="@+id/choice_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showAllWordsButton"
        android:text="@string/show_all"/>
    
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trainingButton"
        android:text="@string/training"/>

</LinearLayout>